# app/Models/User.php
@@ -5,6 +5,7 @@ namespace App\Models;
 // use Illuminate\Contracts\Auth\MustVerifyEmail;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Relations\BelongsToMany;
+use Illuminate\Database\Eloquent\Relations\HasMany;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
 
@@ -87,6 +88,14 @@ class User extends Authenticatable
         return $this->belongsToMany(Project::class)
             ->withPivot('permission')
             ->withTimestamps();
+    }
+
+    /**
+     * Get the external checks owned by the user.
+     */
+    public function externalChecks(): HasMany
+    {
+        return $this->hasMany(ExternalCheck::class);
     }
 
     /**
